--- a/package.json
+++ b/package.json
@@ -1,12 +1,25 @@
 {
+  "type": "module",
   "name": "editor-example",
   "version": "1.0.0",
-  "main": "server.js",
+  "main": "app/server.js",
   "scripts": {
-    "start": "node server.js"
+    "start": "node server.js",
+    "build": "tsc"
   },
   "dependencies": {
-    "express": "^4.18.0",
-    "body-parser": "^1.20.0"
+    "axios": "^1.9.0",
+    "body-parser": "^1.20.0",
+    "config": "^3.3.12",
+    "express": "^4.21.2",
+    "express-handlebars": "^8.0.3",
+    "typescript": "^5.8.3"
+  },
+  "devDependencies": {
+    "@jest/globals": "^29.7.0",
+    "@types/jest": "^29.5.14",
+    "babel-jest": "^29.7.0",
+    "jest": "^29.7.0",
+    "ts-jest": "^29.3.2"
   }
 }
