--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "config": "^3.3.12",
     "express": "^4.21.2",
     "express-handlebars": "^8.0.3",
+    "puppeteer": "^24.10.0",
     "typescript": "^5.8.3"
   },
   "devDependencies": {
